Fix cards scrollbar for Chrome

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,6 +8,23 @@
   box-sizing: border-box;
 }
 
+.card ::-webkit-scrollbar {
+  width: 12px;
+}
+
+.card ::-webkit-scrollbar-thumb {
+  background-color: #888;
+  border-radius: 6px;
+}
+
+.card ::-webkit-scrollbar-thumb:hover {
+  background-color: #555;
+}
+
+.card ::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
 body {
   color: white;
   width: 100%;
